Display Security Tab only for PHP Projects.

--- a/app/views/user/projects/helpers/_security.html.erb
+++ b/app/views/user/projects/helpers/_security.html.erb
@@ -1,7 +1,10 @@
 
+<% no_security_alerts = true %> 
+
 <% @project.dependencies.each do |dep| %>
   <% next if dep.sv_ids.to_a.empty?  %> 
-  <div class="flash error" style="margin-bottom: 5px;"> 
+  <% no_security_alerts = false %> 
+  <div class="alert flash error" style="margin-bottom: 5px;"> 
     <a class="#a dep_link" href="<%= product_version_path( dep.product, dep.version_requested ) %>" >
       <%= dep.product.name %> : <%= dep.version_requested %> 
     </a>
@@ -18,3 +21,9 @@
 
   </div>  
 <% end %>
+
+<% if no_security_alerts == true %> 
+  <div class="alert falsh success">
+    There are no known security vulnerabilities. 
+  </div>
+<% end %> 
