--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -123,9 +123,11 @@
           <li>
             <a data-target="#licenses" data-toggle="tab" onclick="page_view('ga_project_licenses')"><i class = "icon-tasks">&nbsp;</i>Licenses</a>
           </li>
-          <li>
-            <a data-target="#security" data-toggle="tab" onclick="page_view('ga_project_security')"><i class = "icon-tasks">&nbsp;</i>Security</a>
-          </li>
+          <% if @project.language.eql?(Product::A_LANGUAGE_PHP) %> 
+            <li>
+              <a data-target="#security" data-toggle="tab" onclick="page_view('ga_project_security')"><i class = "icon-tasks">&nbsp;</i>Security</a>
+            </li>
+          <% end %>
           <% if signed_in? && @project.user.id.to_s.eql?( current_user.id.to_s ) %>
             <li>
               <a data-target="#collaborators" data-toggle="tab" onclick="page_view('ga_project_collaborators')"><i class = "icon-group">&nbsp;</i>Collaborators</a>
@@ -197,13 +199,15 @@
 
           </div>
 
-          <div id="security" class="tab-pane">
+          <% if @project.language.eql?(Product::A_LANGUAGE_PHP) %> 
+            <div id="security" class="tab-pane">
 
-            <%= render partial: "user/projects/helpers/show_subprojects", locals: {parent_project: @project, child_project: @child, tab_id: 'licenses'} %>
+              <%= render partial: "user/projects/helpers/show_subprojects", locals: {parent_project: @project, child_project: @child, tab_id: 'licenses'} %>
 
-            <%= render partial: "user/projects/helpers/security" %>  
+              <%= render partial: "user/projects/helpers/security" %>  
 
-          </div>
+            </div>
+          <% end %>
 
           <% if signed_in? && @project.collaborator?( current_user ) %>
             <div id="collaborators" class="tab-pane" style="min-height: 360px;">
