--- a/app/views/user/projects/helpers/_security.html.erb
+++ b/app/views/user/projects/helpers/_security.html.erb
@@ -1,6 +1,12 @@
 
 <% no_security_alerts = true %> 
 
+<% if @project.language.eql?(Product::A_LANGUAGE_PHP) && !@project.filename.eql?('composer.lock') %> 
+  <div class="alert falsh warning">
+    For a composer.json file we don't know exactly which versions are locked on production. We assume that all version constraints are resolved to the newest version. For a more accurate resolution we need the composer.lock file. 
+  </div>
+<% end %> 
+
 <% @project.dependencies.each do |dep| %>
   <% next if dep.sv_ids.to_a.empty?  %> 
   <% no_security_alerts = false %> 
