--- a/app/views/lotteries/libraries.html.erb
+++ b/app/views/lotteries/libraries.html.erb
@@ -7,8 +7,10 @@
     </div>
   <% end %>
 </div>
-<form action = "/lottery/follow" method = "post">
+<form action = "/lottery/follow" method="post">
 
+  <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
+  
   <div class="btn-group lottery-buttons" data-toggle="buttons">
     <% @products.each do |product| %>
       <label class="btn lottery-btn btn-primary col-12 col-lg-6">
