--- a/app/views/user/collaborations/index.html.erb
+++ b/app/views/user/collaborations/index.html.erb
@@ -23,8 +23,8 @@
           <tr>
             <th></th>
             <th></th>
-            <th>Outdated</th>
-            <th>Unknown</th>
+            <th>Versions</th>
+            <th>Licenses</th>
           </tr>
         </thead>
         <%= render partial: "/user/collaborations/helpers/project" , collection: @projects %>
